fix: height on mobile devices due to...   1. dynamic toolbar in the Chrome, Mozilla and etc     I use this information:       https://stackoverflow.com/questions/52848856/100vh-height-when-address-bar-is-shown-chrome-mobile       https://developer.chrome.com/blog/url-bar-resizing       https://stackoverflow.com/questions/37112218/css3-100vh-not-constant-in-mobile-browser     And choose vh-dvh units. First units for old brwosers and dvh for modern.   2. Second reason – min-height for Main component. I used this early to fit at least     one ingredient on the screen. Now when reducing the width of the screens,     I reduced the min-height and on mobile devices disable the min-height requirement (by 'initial').
refactor: remove App.module.css. His style was not used.

fix: missing 404.html for gh-pages deploying. I forgot to add this file earlier
  when I was figuring out the deployment.

--- a/src/components/AppHeader/AppHeader.module.css
+++ b/src/components/AppHeader/AppHeader.module.css
@@ -74,5 +74,6 @@
 @media screen and (max-width: 500px) {
   .modalContainer {
     height: 100vh;
+    height: 100dvh;
   }
 }
