--- a/src/components/BurgerIngredients/Bottom/Bottom.module.css
+++ b/src/components/BurgerIngredients/Bottom/Bottom.module.css
@@ -13,6 +13,7 @@
   width: 100vw;
   max-width: none;
   height: 100vh;
+  height: 100dvh;
 
   top: 0;
   left: 0;
